zone-alloc-strong-handle-derive/tests/ui/non_struct.rs
use zone_alloc_strong_handle_derive::StrongHandle;

#[derive(StrongHandle)]
enum IntegerHandle {
    Handle(u64),
}

fn main() {}
